--- a/.env.sample
+++ b/.env.sample
@@ -13,3 +13,7 @@ AMPLITUDE_PROJECT_API=SAMPLE
 SENTRY_DSN=SAMPLE
 ALCHEMY_API_URL_POLYGON_MAINNET=SAMPLE
 BICONOMY_API_KEY_POLYGON_MAINNET=SAMPLE
+ALCHEMY_API_KEY_ETHEREUM=SAMPLE
+ALCHEMY_API_KEY_MATIC=SAMPLE
+ALCHEMY_API_KEY_ROPSTEN=SAMPLE
+ALCHEMY_API_KEY_KOVAN=SAMPLE
