--- a/.env.sample
+++ b/.env.sample
@@ -17,3 +17,4 @@ ALCHEMY_API_KEY_ETHEREUM=SAMPLE
 ALCHEMY_API_KEY_MATIC=SAMPLE
 ALCHEMY_API_KEY_ROPSTEN=SAMPLE
 ALCHEMY_API_KEY_KOVAN=SAMPLE
+APPS_FLYER_DEV_KEY=SAMPLE
