--- a/package.json
+++ b/package.json
@@ -49,7 +49,7 @@
     "expo-app-loading": "~1.3.0",
     "expo-blur": "~11.0.0",
     "expo-clipboard": "~2.1.0",
-    "expo-dev-client": "^0.8.4",
+    "expo-dev-client": "~0.8.5",
     "expo-font": "~10.0.4",
     "expo-haptics": "~11.1.0",
     "expo-linear-gradient": "~11.0.3",
