--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@expo-google-fonts/inter": "^0.2.0",
     "@expo/vector-icons": "^12.0.0",
     "@hookstate/core": "^3.0.13",
+    "@intercom/intercom-react-native": "^3.0.4",
     "@metamask/eth-sig-util": "^4.0.0",
     "@rainbow-me/react-native-payments": "^1.1.8",
     "@react-native-async-storage/async-storage": "~1.15.0",
