--- a/ios/Podfile
+++ b/ios/Podfile
@@ -12,6 +12,7 @@ target 'MinkeDeFiWallet' do
 
 	pod 'expo-dev-menu', path: '../node_modules/expo-dev-menu', :configurations => :debug
   pod 'expo-dev-launcher', path: '../node_modules/expo-dev-launcher', :configurations => :debug
+  pod 'RNUxcam', :path => '../node_modules/react-native-ux-cam'
 
   config = use_native_modules!
 
