--- a/package.json
+++ b/package.json
@@ -102,6 +102,7 @@
     "react-native-svg-transformer": "^1.0.0",
     "react-native-tcp": "^3.3.2",
     "react-native-udp": "^2.7.0",
+    "react-native-ux-cam": "^5.3.4",
     "react-native-vector-icons": "^9.0.0",
     "react-native-web": "0.17.1",
     "react-native-webview": "11.15.0",
