--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -184,6 +184,7 @@ android {
 }
 
 dependencies {
+    implementation("com.squareup.okhttp3:okhttp-urlconnection:4.9.1")
     implementation fileTree(dir: "libs", include: ["*.jar"])
     //noinspection GradleDynamicVersion
     implementation "com.facebook.react:react-native:+"  // From node_modules
