--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@metamask/eth-sig-util": "^4.0.0",
     "@rainbow-me/react-native-payments": "^1.1.8",
     "@react-native-async-storage/async-storage": "~1.15.0",
+    "@react-native-masked-view/masked-view": "0.2.6",
     "@react-navigation/native": "^6.0.4",
     "@react-navigation/native-stack": "^6.2.2",
     "@sentry/react-native": "^3.3.5",
