--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,6 +18,7 @@
 			"@layouts": ["src/layouts/index"],
 			"@containers": ["src/containers/index"],
 			"@images": ["src/images/index"],
+			"@avatars": ["src/avatars/index"],
 			"@hooks": ["src/hooks/index"],
 			"@utils/*": ["src/utils/*"],
 			"@src/*": ["src/*"]
