--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "expo-dev-client": "~0.8.6",
     "expo-font": "~10.0.4",
     "expo-haptics": "~11.1.0",
+    "expo-image-picker": "~12.0.1",
     "expo-linear-gradient": "~11.0.3",
     "expo-linking": "~3.0.0",
     "expo-local-authentication": "~12.1.0",
