--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -250,6 +250,10 @@ dependencies {
     }
 
 		implementation project(':react-native-fs')
+
+		compile ('com.google.android.gms:play-services-drive:17.0.0') {
+    	force = true;
+		}
 }
 
 // Run this once to be able to run the application with BUCK
