--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@tradle/react-native-http": "^2.0.1",
     "@types/d3-scale": "^4.0.2",
     "@types/d3-shape": "^3.0.2",
+    "@walletconnect/react-native-dapp": "^1.7.8",
     "assert": "^1.5.0",
     "axios": "^0.26.1",
     "babel-plugin-inline-dotenv": "^1.6.0",
