--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@hookstate/core": "^3.0.13",
     "@intercom/intercom-react-native": "^3.0.4",
     "@metamask/eth-sig-util": "^4.0.0",
+    "@onramper/widget": "^2.2.16",
     "@rainbow-me/react-native-payments": "^1.1.8",
     "@react-native-async-storage/async-storage": "~1.15.0",
     "@react-native-masked-view/masked-view": "0.2.6",
