--- a/.env.sample
+++ b/.env.sample
@@ -28,8 +28,8 @@ UXCAM_API_KEY=SAMPLE
 STORYTELLER_KEY=SAMPLE
 STORYTELLER_ANDROID_KEY=SAMPLE
 ZAPPER_API_KEY=SAMPLE
-ON_RAMPER_API_KEY=SAMPLE
 MOONPAY_BUY_URL=SAMPLE
 MOONPAY_API_URL=SAMPLE
 MOONPAY_API_KEY=SAMPLE
 MOONPAY_SECRET_KEY=SAMPLE
+OPENSEA_API_KEY=SAMPLE
