--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -58,6 +58,7 @@
 		"operator-linebreak": ["off"],
 		"react/jsx-wrap-multilines": "off",
 		"react/jsx-no-useless-fragment": "off",
-		"no-nested-ternary": "off"
+		"no-nested-ternary": "off",
+		"react/jsx-props-no-spreading": "off"
 	}
 }
